--- a/homework/03/deployment.yaml
+++ b/homework/03/deployment.yaml
@@ -1,22 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
+  name: otus-hw03-deployment
 spec:
+  replicas: 3
   selector:
     matchLabels:
-      app: myapp
+      app: otus-hw03-app
   template:
     metadata:
       labels:
-        app: myapp
+        app: otus-hw03-app
     spec:
       containers:
-      - name: myapp
-        image: <Image>
-        resources:
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
+      - name: otus-hw03
+        image: riddlocat/otus_hw02:1.0
         ports:
-        - containerPort: <Port>
+          - name: web
+            containerPort: 8000
+        livenessProbe:
+          httpGet:
+            port: 8000
+            path: /health
+          initialDelaySeconds: 5
+          periodSeconds: 2
+          timeoutSeconds: 1
+        readinessProbe:
+          httpGet:
+            port: 8000
+            path: /health
+          initialDelaySeconds: 5
+          periodSeconds: 2
+          timeoutSeconds: 1
