--- a/homework/03/service.yaml
+++ b/homework/03/service.yaml
@@ -1,10 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp
+  name: otus-hw03-service
 spec:
+  type: NodePort
   selector:
-    app: myapp
+    app: otus-hw03-app
   ports:
-  - port: <Port>
-    targetPort: <Target Port>
+    - protocol: TCP
+      port: 8000
+      targetPort: 8000
