--- a/homework/03/ingress.yaml
+++ b/homework/03/ingress.yaml
@@ -1,18 +1,26 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: myingress
-  labels:
-    name: myingress
+  name: otus-hw03-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
+  ingressClassName: nginx
   rules:
-  - host: <Host>
+  - host: arch.homework
     http:
       paths:
-      - pathType: Prefix
-        path: "/"
-        backend:
-          service:
-            name: <Service>
-            port: 
-              number: <Port>
+        - path: /otusapp/kovalevas
+          pathType: Prefix
+          backend:
+            service:
+              name: otus-hw03-service
+              port: 
+                number: 8000
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: otus-hw03-service
+              port: 
+                number: 8000
