--- a/homework/03/ingress.yaml
+++ b/homework/03/ingress.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: otus-hw03-ingress
   annotations:
+    nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   ingressClassName: nginx
@@ -10,15 +11,15 @@ spec:
   - host: arch.homework
     http:
       paths:
-        - path: /otusapp/kovalevas
-          pathType: Prefix
+        - path: /otusapp/kovalevas/?(.*)($|/)
+          pathType: ImplementationSpecific
           backend:
             service:
               name: otus-hw03-service
               port: 
                 number: 8000
-        - path: /
-          pathType: Prefix
+        - path: /(.*)
+          pathType: ImplementationSpecific
           backend:
             service:
               name: otus-hw03-service
